<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="120dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/DeleteDoorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_really_remove_door"
        android:textSize="23sp"
        android:textColor="?android:textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="@dimen/padding_10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OkButton"
            android:layout_width="125dp"
            android:layout_height="@dimen/padding_50"
            android:layout_marginHorizontal="@dimen/padding_20"
            android:layout_weight="1"
            android:text="@string/button_ok" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="125dp"
            android:layout_height="@dimen/padding_50"
            android:layout_marginHorizontal="@dimen/padding_20"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

    </LinearLayout>

</LinearLayout>
